src/objects/slackv2__Subscription_Type__c.object
<CustomObject>
    <fields>
        <fullName>slackv2__Activity_Api_Name__c</fullName>
        <label>Activity Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Custom__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slackv2__Displayable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Displayable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slackv2__Has_Assigned_To_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Assigned To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slackv2__Object_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slackv2__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slackv2__Standard_Type_ENUM__c</fullName>
        <label>Standard Type ENUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Subscription_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Object</label>
        <referenceTo>slackv2__Subscription_Object__c</referenceTo>
        <relationshipName>Subscription_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__User_Defined__c</fullName>
        <defaultValue>true</defaultValue>
        <label>User Defined</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription Type</label>
    <nameField>
        <label>Subscription Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>